@@ -4,6 +4,10 @@
 
 This file contains a list of all changes to the Albert OS.
 
+Mar 13th 2008
+ - added naked classes TTask and TMonitor
+ - and new function LocalToGlobalId()
+
 Mar 11th 2008
  - implemented more Albert SO functions
  - added code to call the emulator from within Albert code
